--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: 
+  github: https://github.com/kmossi/
   instagram:
   linkedin:
   pinterest:
