--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ linkedin: # add your Linkedin handle
 email: kmossi@gmail.com
 
 # Disqus
-discus-identifier: kmossi # add your discus identifier
+discus-identifier:  # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
