add disqus identifier

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ github: kmossi # add your Github handle
 email: kmossi@gmail.com
 
 # Disqus
-discus-identifier: kmossi # add your discus identifier
+discus-identifier: kmossi-github-io # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
